[package]
name = "redis-node"
version = "0.6.8-rc.3"
authors = ["Eugene The Dream"]
rust-version = "1.81.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "saver"
path = "src/bin/saver.rs"

[[bin]]
name = "caching-saver"
path = "src/bin/caching_saver.rs"

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "backfill-and-save"
path = "src/bin/backfill_and_save.rs"

[dependencies]
actix = "=0.13.0"
actix-web = "4.3.0"
# actix-http = "=3.0.0-beta.6"
actix-tls = "3.0.0"
actix-rt = "2.2.0"
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.5" }
# futures = "0.3.5"
tokio = { version = "1.38", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.6"

near-indexer = { git = "https://github.com/fastnear/nearcore", rev = "4b95186bbc5e8d102ec00d9587a99b0bb035d6a6" }
borsh = "1.5.0"

itertools = "0.12.0"

### Redis
redis = { version = "0.26.0", features = ["tokio-comp", "tokio-native-tls-comp", "streams"] }

tar = "0.4"
flate2 = "1.0"

[profile.release]
overflow-checks = true
panic = 'abort'
lto = "fat"
codegen-units = 1
