[package]
name = "redis-node"
version = "2.6.1"
authors = ["Eugene The Dream"]
rust-version = "1.85.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "saver"
path = "src/bin/saver.rs"

[[bin]]
name = "caching-saver"
path = "src/bin/caching_saver.rs"

[[bin]]
name = "backfill"
path = "src/bin/backfill.rs"

[[bin]]
name = "backfill-and-save"
path = "src/bin/backfill_and_save.rs"

[dependencies]
actix = "=0.13.0"
actix-web = "4.3.0"
# actix-http = "=3.0.0-beta.6"
actix-tls = "3.0.0"
actix-rt = "2.2.0"
bigdecimal = "=0.1.0"
anyhow = "1.0.51"

openssl-probe = { version = "0.1.5" }
futures = "0.3"
tokio = { version = "1.38", features = ["time", "sync", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tokio-retry = "0.3.0"

dotenv = "0.15.0"
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1.6"

near-indexer = { git = "https://github.com/fastnear/nearcore", rev = "633b72a10498ea083c24020e011b56a5b7cd9a1d" }
borsh = "1.5.0"

itertools = "0.12.0"

### Redis
redis = { version = "0.26.0", features = ["tokio-comp", "tokio-native-tls-comp", "streams"] }

tar = "0.4"
flate2 = "1.0"

fastnear-primitives = "0.3.1"
fastnear-neardata-fetcher = "0.3.1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
overflow-checks = true
panic = 'abort'
lto = "fat"
codegen-units = 1
